--- a/index.html
+++ b/index.html
@@ -1,10 +1,95 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Hello World</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Hello, world!</h1>
+
+  <header class="wrap header">
+    <div class="brand">
+      <h1>Portfolio</h1>
+      <p class="subtitle">Role / Discipline</p>
+    </div>
+
+    <nav class="links">
+      <a href="#" target="_blank" rel="noreferrer">Link</a>
+      <a href="#" target="_blank" rel="noreferrer">Link</a>
+      <a href="#" target="_blank" rel="noreferrer">Link</a>
+      <a href="#" target="_blank" rel="noreferrer">Document</a>
+    </nav>
+  </header>
+
+  <main class="wrap">
+
+    <section class="hero">
+      <div class="avatar"></div>
+      <p class="tagline">
+        Short one-line description of what you do or what this portfolio represents.
+      </p>
+    </section>
+
+    <section>
+      <h2>Selected Work</h2>
+
+      <article class="card project">
+        <div class="media">
+          <div class="mediaPlaceholder">Media</div>
+        </div>
+
+        <div class="meta">
+          <div class="chips">
+            <span class="chip">Category</span>
+            <span class="chip">Tools / Stack</span>
+          </div>
+          <h3>Project Title</h3>
+          <p>Brief neutral description of the work or outcome.</p>
+        </div>
+      </article>
+
+      <!-- Duplicate project blocks as needed -->
+
+    </section>
+
+    <section>
+      <h2>Background</h2>
+      <div class="card">
+        <h3>Institution / Organization</h3>
+        <p>General description of experience or focus.</p>
+      </div>
+    </section>
+
+    <section>
+      <h2>Skills</h2>
+      <ul class="skills">
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Tool</li>
+        <li>Technology</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>About</h2>
+      <div class="card">
+        <p>
+          Short neutral bio. Who this portfolio is for and what kind of work it showcases.
+        </p>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="wrap footer">
+    <small>© <span id="y"></span></small>
+  </footer>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
