--- a/index.html
+++ b/index.html
@@ -34,22 +34,98 @@
     <section>
       <h2>Selected Work</h2>
 
-      <article class="card project">
-        <div class="media">
-          <div class="mediaPlaceholder">Media</div>
-        </div>
-
-        <div class="meta">
-          <div class="chips">
-            <span class="chip">Category</span>
-            <span class="chip">Tools / Stack</span>
+      <div class="projects-grid">
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
           </div>
-          <h3>Project Title</h3>
-          <p>Brief neutral description of the work or outcome.</p>
-        </div>
-      </article>
 
-      <!-- Duplicate project blocks as needed -->
+          <div class="meta">
+            <div class="chips">
+              <span class="chip">Category</span>
+              <span class="chip">Tools / Stack</span>
+            </div>
+            <h3>Project Title 1</h3>
+            <p>Brief neutral description of the work or outcome.</p>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+
+          <div class="meta">
+            <div class="chips">
+              <span class="chip">Category</span>
+              <span class="chip">Tools / Stack</span>
+            </div>
+            <h3>Project Title 2</h3>
+            <p>Brief neutral description of the work or outcome.</p>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+
+          <div class="meta">
+            <div class="chips">
+              <span class="chip">Category</span>
+              <span class="chip">Tools / Stack</span>
+            </div>
+            <h3>Project Title 3</h3>
+            <p>Brief neutral description of the work or outcome.</p>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+
+          <div class="meta">
+            <div class="chips">
+              <span class="chip">Category</span>
+              <span class="chip">Tools / Stack</span>
+            </div>
+            <h3>Project Title 4</h3>
+            <p>Brief neutral description of the work or outcome.</p>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+
+          <div class="meta">
+            <div class="chips">
+              <span class="chip">Category</span>
+              <span class="chip">Tools / Stack</span>
+            </div>
+            <h3>Project Title 5</h3>
+            <p>Brief neutral description of the work or outcome.</p>
+          </div>
+        </article>
+
+        <article class="card project">
+          <div class="media">
+            <div class="mediaPlaceholder">Media</div>
+          </div>
+
+          <div class="meta">
+            <div class="chips">
+              <span class="chip">Category</span>
+              <span class="chip">Tools / Stack</span>
+            </div>
+            <h3>Project Title 6</h3>
+            <p>Brief neutral description of the work or outcome.</p>
+          </div>
+        </article>
+
+      </div>
 
     </section>
 
