--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     </div>
 
     <nav class="links">
-      <a href="#" target="_blank" rel="noreferrer">Link</a>
-      <a href="#" target="_blank" rel="noreferrer">Link</a>
-      <a href="#" target="_blank" rel="noreferrer">Link</a>
-      <a href="#" target="_blank" rel="noreferrer">Document</a>
+      <a href="https://www.tiktok.com/@artradingcards" target="_blank" rel="noreferrer" aria-label="TikTok">
+        <img class="icon" src="assets/icons/tiktok.svg" alt="TikTok">
+      </a>
+      <a href="https://www.youtube.com/@justinsdeVRlogs" target="_blank" rel="noreferrer" aria-label="YouTube">
+        <img class="icon" src="assets/icons/youtube.svg" alt="YouTube">
+      </a>
+      <a href="https://www.linkedin.com/in/justindpnt/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+        <img class="icon" src="assets/icons/linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub">
+        <img class="icon" src="assets/icons/github.svg" alt="GitHub">
+      </a>
     </nav>
   </header>
 
