Profile blurb formatting fixes

--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
   <main class="wrap">
 
     <section class="hero">
-      <div class="avatar"></div>
-      <h2 class="tagline">
-        Hi, I'm Justin!<br><br>
-        I'm a Producer, Unity Developer, and Creative Technologist
-      </h2>
+      <div class="hero-inner">
+        <div class="avatar"></div>
+        <div class="tagline">
+          <h2 class="hero-name">Hi, I'm Justin!</h2>
+          <p class="hero-sub">Program Manager<br>Unity Developer<br>Creative Technologist</p>
+        </div>
+      </div>
     </section>
 
 
 
     <section>
-      <h2 class="centered brands-heading-outside">Brands I've built for...</h2>
+      <h2 class="centered brands-heading-outside">Previously employed by...</h2>
       <div class="card brands">
         <div class="brands-grid">
 
