Profile spacing fixed

--- a/index.html
+++ b/index.html
@@ -32,17 +32,13 @@
 
   <main class="wrap">
 
-    <section class="hero">
-      <div class="hero-inner">
-        <div class="avatar"></div>
-        <div class="tagline">
-          <h2 class="hero-name">Hi, I'm Justin!</h2>
-          <p class="hero-sub">Program Manager<br>Unity Developer<br>Creative Technologist</p>
-        </div>
+    <section class="Profile-info">
+      <img class="avatar" src="assets/avatar-placeholder.svg" alt="Profile picture" width="110" height="110">
+      <div class="tagline">
+        <h1 class="hero-name">Hi, I'm Justin!</h1>
+        <p class="hero-sub">Program Manager<br>Unity Developer<br>Creative Technologist</p>
       </div>
     </section>
-
-
 
     <section>
       <h2 class="centered brands-heading-outside">Previously employed by...</h2>
