Added resume link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub">
         <img class="icon" src="assets/icons/github.svg" alt="GitHub">
       </a>
+      <!-- Resume download button -->
+      <a class="resume-btn" href="assets/resume.pdf" download target="_blank" rel="noopener noreferrer">Resume</a>
     </nav>
   </header>
 
