Header Profile Pic + Heading Spacing

--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 
   <header class="wrap header">
     <div class="brand">
-      <h1 id="brand-name">Justin DuPont</h1>
-      <p class="subtitle" id="brand-subtitle">Portfolio</p>
+      <img class="header-avatar" src="assets/profile.JPEG" alt="Profile picture">
+      <div class="brand-text">
+        <h1 id="brand-name">Justin DuPont</h1>
+        <p class="subtitle" id="brand-subtitle">Portfolio</p>
+      </div>
     </div>
 
     <nav class="links">
-      <a href="https://www.tiktok.com/@artradingcards" target="_blank" rel="noreferrer" aria-label="TikTok">
+      <a href="https://www.tiktok.com/@artradingcards" target="_blank" rel="noreferrer" aria-label="TikTok" title="TikTok">
         <img class="icon" src="assets/icons/tiktok.svg" alt="TikTok">
       </a>
-      <a href="https://www.youtube.com/@justinsdeVRlogs" target="_blank" rel="noreferrer" aria-label="YouTube">
+      <a href="https://www.youtube.com/@justinsdeVRlogs" target="_blank" rel="noreferrer" aria-label="YouTube" title="YouTube">
         <img class="icon" src="assets/icons/youtube.svg" alt="YouTube">
       </a>
-      <a href="https://www.linkedin.com/in/justindpnt/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/justindpnt/" target="_blank" rel="noreferrer" aria-label="LinkedIn" title="LinkedIn">
         <img class="icon" src="assets/icons/linkedin.svg" alt="LinkedIn">
       </a>
-      <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub">
+      <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub" title="GitHub">
         <img class="icon" src="assets/icons/github.svg" alt="GitHub">
       </a>
       <!-- Resume button: opens PDF in a new tab -->
@@ -35,9 +38,8 @@
   <main class="wrap">
 
     <section class="Profile-info">
-      <img class="avatar" src="assets/avatar-photo.gif" alt="Profile picture">
+      <img class="showreel-gif" src="assets/showreel-gif.gif" alt="Showreel GIF">
       <div class="tagline">
-        <img class="hero-profile" src="assets/profile.JPEG" alt="Profile picture">
         <h1 class="hero-name" id="hero-name">Hi, I'm Justin!</h1>
         <p class="hero-sub" id="hero-sub">Program Manager<br>Unity Developer<br>Creative Technologist</p>
       </div>
