--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     </div>
 
     <nav class="links">
-      <a href="https://www.tiktok.com/@artradingcards" target="_blank" rel="noreferrer" aria-label="TikTok">
+      <a href="https://www.tiktok.com/@artradingcards" target="_blank" rel="noreferrer" aria-label="TikTok" title="TikTok">
         <img class="icon" src="assets/icons/tiktok.svg" alt="TikTok">
       </a>
-      <a href="https://www.youtube.com/@justinsdeVRlogs" target="_blank" rel="noreferrer" aria-label="YouTube">
+      <a href="https://www.youtube.com/@justinsdeVRlogs" target="_blank" rel="noreferrer" aria-label="YouTube" title="YouTube">
         <img class="icon" src="assets/icons/youtube.svg" alt="YouTube">
       </a>
-      <a href="https://www.linkedin.com/in/justindpnt/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/justindpnt/" target="_blank" rel="noreferrer" aria-label="LinkedIn" title="LinkedIn">
         <img class="icon" src="assets/icons/linkedin.svg" alt="LinkedIn">
       </a>
-      <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub">
+      <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub" title="GitHub">
         <img class="icon" src="assets/icons/github.svg" alt="GitHub">
       </a>
       <!-- Resume button: opens PDF in a new tab -->
