Showreel Updated to Newer Version

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
   <main class="wrap">
 
     <section class="Profile-info">
-      <img class="showreel-gif" src="assets/showreel-gif.gif" alt="Showreel">
+      <video class="showreel-gif" autoplay loop muted playsinline aria-label="Showreel">
+        <source src="assets/Showreel2026.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
       <div class="tagline">
-        <h1 class="hero-name" id="hero-name">Hi, I'm Justin!</h1>
-        <p class="hero-sub" id="hero-sub">Program Manager<br>Unity Developer<br>Creative Technologist</p>
+        <h1 class="hero-name" id="hero-name"></h1>
+        <p class="hero-sub" id="hero-sub"></p>
       </div>
     </section>
 
@@ -220,4 +223,3 @@
 </body>
 </html>
     
-
