--- a/index.html
+++ b/index.html
@@ -30,21 +30,19 @@
       <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub" title="GitHub">
         <img class="icon" src="assets/icons/github.svg" alt="GitHub">
       </a>
-      <!-- Resume button: opens PDF in a new tab -->
       <a class="resume-btn" href="assets/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
     </nav>
   </header>
 
   <main class="wrap">
 
-    <section class="Profile-info">
+    <section class="showreel">
       <video class="showreel-gif" autoplay loop muted playsinline aria-label="Showreel">
         <source src="assets/Showreel2026.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="tagline">
-        <h1 class="hero-name" id="hero-name"></h1>
-        <p class="hero-sub" id="hero-sub"></p>
+        <p class="showreel-text" id="showreel-text"></p>
       </div>
     </section>
 
@@ -205,18 +203,14 @@
     })();
   </script>
 
-  <!-- Bootstrap: ensure content.js data is applied and provide debug logs -->
+  <!-- Apply site content if available -->
   <script>
     try {
-      console.log('bootstrap: siteContent present?', !!window.siteContent);
       if (typeof window.populateSiteContent === 'function') {
         window.populateSiteContent();
-        console.log('bootstrap: populateSiteContent() called');
-      } else {
-        console.warn('bootstrap: populateSiteContent not found — content.js may not have loaded');
       }
     } catch (err) {
-      console.error('bootstrap: error while applying siteContent', err);
+      // error applying content: ignore in production
     }
   </script>
 
