--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="https://github.com/justindpnt" target="_blank" rel="noreferrer" aria-label="GitHub" title="GitHub">
         <img class="icon" src="assets/icons/github.svg" alt="GitHub">
       </a>
-      <a class="resume-btn" href="assets/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
+      <a class="resume-btn" href="assets/resume/Justin_DuPont_Resume_2026.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
     </nav>
   </header>
 
