Professional work section added

--- a/index.html
+++ b/index.html
@@ -167,6 +167,40 @@
 
     </section>
 
+    <section class="professional-section">
+      <h2 class="taglines">Professional Experience</h2>
+      <div class="professional-grid">
+
+        <article class="card professional">
+          <div class="meta professional-meta">
+            <h3>HP inc.</h3>
+            <p>Gaming & AI Engineer</p>
+            <br>
+            <p>HP experience here</p>
+          </div>
+        </article>
+
+        <article class="card professional">
+          <div class="meta professional-meta">
+            <h3>Company B — Product Owner</h3>
+            <p>Game Producer and Unity Developer</p>
+            <br>
+            <p>Freelance experience here</p>
+          </div>
+        </article>
+
+        <article class="card professional">
+          <div class="meta professional-meta">
+            <h3>Company C — Program Manager</h3>
+            <p>Program Manager</p>
+            <br>
+            <p>Microsoft Experience here</p>
+          </div>
+        </article>
+
+      </div>
+    </section>
+
     
 
     <section>
