Fleshed Out Work Experience Section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="icon" src="assets/icons/github.svg" alt="GitHub">
       </a>
       <a class="resume-btn" href="assets/resume/Justin_DuPont_Resume_2026.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
-    </nav>
+    </nav> 
   </header>
 
   <main class="wrap">
@@ -78,7 +78,7 @@
               <span class="chip">AR Foundation</span>
             </div>
             <h3>Augmented Reality Pokemon Cards</h3>
-            <p>I made custom augmented reality Pokemon cards that can battle! 500,000+ Views on Social Media!</p>
+            <p>I made custom augmented reality Pokemon cards that can battle!</p>
           </div>
         </article>
 
@@ -95,7 +95,7 @@
               <span class="chip">Meta Quest Store</span>
             </div>
             <h3>Break Room</h3>
-            <p>Brief neutral description of the work or outcome.</p>
+            <p>A physical playroom where you can break glass objects in AR and VR.</p>
           </div>
         </article>
 
@@ -112,7 +112,7 @@
               <span class="chip">iOS Store</span>
             </div>
             <h3>Familiars</h3>
-            <p>Brief neutral description of the work or outcome.</p>
+            <p>An iOS Tamagochi-like game where AR animals are projected onto your wrist.</p>
           </div>
         </article>
 
@@ -129,7 +129,7 @@
               <span class="chip">URP Shaders</span>
             </div>
             <h3>Surface Changer</h3>
-            <p>Brief neutral description of the work or outcome.</p>
+            <p>Quest 3 app (unpublished) where you can change the material of any surface.</p>
           </div>
         </article>
 
@@ -143,8 +143,8 @@
               <span class="chip">Category</span>
               <span class="chip">Tools / Stack</span>
             </div>
-            <h3>Project Title 5</h3>
-            <p>Brief neutral description of the work or outcome.</p>
+            <h3>3D Printed Augmented Reality Outdoor Headsets</h3>
+            <p>Custom open-source headsets w/ hand tracking built to work outdoors. 1st place engineering captstone award!</p>
           </div>
         </article>
 
@@ -158,8 +158,8 @@
               <span class="chip">Category</span>
               <span class="chip">Tools / Stack</span>
             </div>
-            <h3>Project Title 6</h3>
-            <p>Brief neutral description of the work or outcome.</p>
+            <h3>I've also made 8+ smaller games!</h3>
+            <p>Most of which are available to see on my itch.io</p>
           </div>
         </article>
 
@@ -172,29 +172,48 @@
       <div class="professional-grid">
 
         <article class="card professional">
+          <img class="professional-logo" src="assets/professional-logos/HP inc logo.png" alt="HP logo">
           <div class="meta professional-meta">
-            <h3>HP inc.</h3>
-            <p>Gaming & AI Engineer</p>
+            <h3>Gaming & AI Engineer</h3>
+            <p>HP Inc. (Contract)</p>
             <br>
-            <p>HP experience here</p>
+            <p>•	Prototyped AI demos in Unity for hardware showcases, including LLM-powered NPCs running offline
+               <br>•	Monitored and triaged 2,000+ social media posts per month to identify user pain points, guide feature development, and coordinate software and hardware fixes with rapid turnaround times
+               <br>•	Produced a monthly livestream tech showcase, reaching 1.7M+ followers and highlighting new products
+               <br>•	Scouted and partnered with 6+ external vendors to build and integrate AI experiences into HP’s ecosystem
+            </p>
           </div>
         </article>
 
         <article class="card professional">
+          <img class="professional-logo" src="assets/professional-logos/Justin DuPont logo.png" alt="Personal logo">
           <div class="meta professional-meta">
-            <h3>Company B — Product Owner</h3>
-            <p>Game Producer and Unity Developer</p>
+            <h3>Unity Game Developer</h3>
+            <p>Independent Game Development</p>
             <br>
-            <p>Freelance experience here</p>
+            <p>
+                •	Independently designed, developed, and shipped 3 original games, with releases on iOS and Meta Quest 3
+                <br>•	Produced gameplay and interaction demos and devlogs reaching 500,000+ views across YouTube and TikTok 
+                <br><br>Break Room • Unity (C#) • Meta Quest 3 •  Meta Quest store • Demo	                    
+                <br>•	VR physics sandbox featuring realistic object destruction and spatial interactions
+                <br><br>Familiars: AR Animal Companions • Unity (C#) • iOS & Apple Watch •  iOS app store • Demo          
+                <br>•	Tamagotchi-like game projecting animated pets onto an Apple Watch face, with collectible AR animal cards
+                <br><br>Augmented Reality Pokémon Card Battles (Tech Demo) • Unity (C#) • Social Media • Demo 
+                <br>•	Fan-made card game featuring 9 animated models, real-time lighting, and interactive battle mechanics
+            </p>
           </div>
         </article>
 
         <article class="card professional">
+          <img class="professional-logo" src="assets/professional-logos/Microsoft logo.png" alt="Microsoft logo">
           <div class="meta professional-meta">
-            <h3>Company C — Program Manager</h3>
-            <p>Program Manager</p>
+            <h3>Program Manager</h3>
+            <p>Microsoft</p>
             <br>
-            <p>Microsoft Experience here</p>
+            <p>•	Led Azure’s payment method product area end-to-end: planning, scoping, tracking, and launching 3+ cloud features per month in collaboration with business, UX, legal, support, and engineering teams
+               <br>•	Designed and validated Azure features through user research and A/B testing, shipping to millions of users
+               <br>•	Shipped Azure payment features that eliminated 1,500+ monthly support cases, saving $1.6M and 28,800 support hours per month
+            </p>
           </div>
         </article>
 
