Adjusted Demo Reel Text & Spacing

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         Your browser does not support the video tag.
       </video>
       <div class="tagline">
-        <p class="showreel-text" id="showreel-text">I like building and sharing things that have not been made before.</p>
+        <h1 class="greeting">Hi, I'm Justin!</h1>
+        <p class="showreel-text" id="showreel-text">
+          <br>I build and share new kinds of interactive experiences.
+        </p>
       </div>
     </section>
 
