Updated Role Descriptions

--- a/index.html
+++ b/index.html
@@ -172,18 +172,17 @@
 
     <section class="professional-section">
       <h2 class="taglines">Professional Experience</h2>
+      <p class="sub_taglines">More details can be found on my resume</p>
       <div class="professional-grid">
 
         <article class="card professional">
           <img class="professional-logo" src="assets/professional-logos/HP inc logo.png" alt="HP logo">
           <div class="meta professional-meta">
             <h3>Gaming & AI Engineer</h3>
-            <p>HP Inc. (Contract)</p>
-            <br>
-            <p>•	Prototyped AI demos in Unity for hardware showcases, including LLM-powered NPCs running offline
-               <br>•	Monitored and triaged 2,000+ social media posts per month to identify user pain points, guide feature development, and coordinate software and hardware fixes with rapid turnaround times
-               <br>•	Produced a monthly livestream tech showcase, reaching 1.7M+ followers and highlighting new products
-               <br>•	Scouted and partnered with 6+ external vendors to build and integrate AI experiences into HP’s ecosystem
+            <p>HP Inc. (Contract) , August 2024 – Present</p>
+
+            <p>
+              <br>Built AI-driven interactive demos in Unity for HP OMEN hardware showcases (For example: Offline LLM-powered NPCs in Unity) while coordinating software and hardware features based on user feedback.
             </p>
           </div>
         </article>
@@ -192,17 +191,10 @@
           <img class="professional-logo" src="assets/professional-logos/Justin DuPont logo.png" alt="Personal logo">
           <div class="meta professional-meta">
             <h3>Unity Game Developer</h3>
-            <p>Independent Game Development</p>
+            <p>Independent Game Development, October 2021 – August 2024</p>
             <br>
             <p>
-                •	Independently designed, developed, and shipped 3 original games, with releases on iOS and Meta Quest 3
-                <br>•	Produced gameplay and interaction demos and devlogs reaching 500,000+ views across YouTube and TikTok 
-                <br><br>Break Room • Unity (C#) • Meta Quest 3 •  Meta Quest store • Demo	                    
-                <br>•	VR physics sandbox featuring realistic object destruction and spatial interactions
-                <br><br>Familiars: AR Animal Companions • Unity (C#) • iOS & Apple Watch •  iOS app store • Demo          
-                <br>•	Tamagotchi-like game projecting animated pets onto an Apple Watch face, with collectible AR animal cards
-                <br><br>Augmented Reality Pokémon Card Battles (Tech Demo) • Unity (C#) • Social Media • Demo 
-                <br>•	Fan-made card game featuring 9 animated models, real-time lighting, and interactive battle mechanics
+              Designed, developed, and shipped novel Unity games and AR/VR prototypes for iOS and Meta Quest, reaching hundreds of thousands of viewers through gameplay demos and devlogs.
             </p>
           </div>
         </article>
@@ -211,11 +203,20 @@
           <img class="professional-logo" src="assets/professional-logos/Microsoft logo.png" alt="Microsoft logo">
           <div class="meta professional-meta">
             <h3>Program Manager</h3>
-            <p>Microsoft</p>
+            <p>Microsoft, September 2019 - May 2021</p>
             <br>
-            <p>•	Led Azure’s payment method product area end-to-end: planning, scoping, tracking, and launching 3+ cloud features per month in collaboration with business, UX, legal, support, and engineering teams
-               <br>•	Designed and validated Azure features through user research and A/B testing, shipping to millions of users
-               <br>•	Shipped Azure payment features that eliminated 1,500+ monthly support cases, saving $1.6M and 28,800 support hours per month
+            <p> Owned customer-facing Azure billing and payment experiences end-to-end, shipping high-impact features used by millions of cloud customers and significantly reducing support ticket volume.
+            </p>
+          </div>
+        </article>
+
+        <article class="card professional">
+          <img class="professional-logo" src="assets/professional-logos/Microsoft logo.png" alt="Microsoft logo">
+          <div class="meta professional-meta">
+            <h3>Program Manager Intern</h3>
+            <p>Microsoft, Summer 2018</p>
+            <br>
+            <p> Helped modernize Azure promo code and cloud plan systems used to deliver customer savings across multiple subscription offerings.
             </p>
           </div>
         </article>
@@ -223,7 +224,14 @@
       </div>
     </section>
 
-    
+    <section class="writing-section">
+      <h2 class="taglines">Writing, Talks, and Media</h2>
+      <div class="card">
+        <div class="meta">
+          <p>Links to articles, recorded talks, and media appearances. <em>Content coming soon</em>.</p>
+        </div>
+      </div>
+    </section>
 
     <section>
       <h2 id="skills-heading">Skills</h2>
